# radix

./: .gitignore  Cargo.toml  README.md  build.rs  diagram.json  template.yaml  wokwi.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust_ci.yml
scripts/: build.sh  flash.sh
src/: display_line_buffer_providers.rs  main.rs
ui/: main.slint
