[package]
edition = "2021"
name = "radix"
version = "0.1.0"
authors = ["mon <monpinoliad@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
gc9a01-rs = "0.4.2"
# cst816s = {git = "https://github.com/tstellanova/cst816s.git"}

esp-hal = { version = "=1.0.0", features = ["esp32s3", "unstable"] }

esp-backtrace = { version = "0.18.1", features = [
  "esp32s3",
  # "exception-handler", #gone in 1.0.0
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32s3"] }

log = { version = "0.4.28" }

slint = { version = "1.14.1", default-features = false, features = [
  "compat-1-2",
  "unsafe-single-threaded",
  "libm",
  "renderer-software",
] }

embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
esp-alloc = "0.9.0"
embedded-graphics = "0.8.1"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[build-dependencies]
slint-build = "1.14.1"
